# load-shift-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  TECHNICAL_DOC.md  pyproject.toml  repro_error.py  test_mip_numpy.py  test_mip_numpy_mul.py
assets/: README.md  generate_animation.py  generate_images.py  logo.tex  moving_horizon.tex  pdf_utils.py  transfer_matrix.sty  transfer_matrix.tex  transfer_matrix_moving_horizon.tex
data/: example_data.csv
examples/: api_example.py  run_api.py
src/loadshift/: api.py  models.py  moving_horizon.py  solver_adapters.py  time_ranges.py  transfer_indices.py  virtual_storage.py
tests/: conftest.py  test_api.py  test_moving_horizon.py  test_time_ranges.py  test_transfer_indices.py  test_virtual_storage.py
